Added Auth to config for Ping

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,6 +81,11 @@ controllers {
       needsAuditing = false
     }
 
+    uk.gov.hmrc.businessregistrationnotification.controllers.Ping = {
+        needsAuth = false
+        needsLogging = false
+        needsAuditing = false
+    }
 }
 
 
