Business registration tweak

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -83,7 +83,7 @@ controllers {
 
     uk.gov.hmrc.businessregistrationnotification.controllers.Ping = {
         needsAuth = false
-        needsLogging = false
+        needsLogging = true
         needsAuditing = false
     }
 }
@@ -146,8 +146,11 @@ microservice {
             enabled = false
         }
     }
-
     services {
+        business-registration-frontend {
+            host = localhost
+            port = 9634
+        }
 
         auth {
             host=localhost
