SCRS-2806 initial work to setup basic auth for the ping

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,7 +44,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-application.global=uk.gov.hmrc.businessregistrationnotification.MicroserviceGlobal
+application.global=config.MicroserviceGlobal
 
 # Router
 # ~~~~~
@@ -75,13 +75,7 @@ controllers {
       needsAuditing = false
     }
 
-  uk.gov.hmrc.businessregistrationnotification.controllers.MicroserviceHelloWorld = {
-      needsAuth = false
-      needsLogging = false
-      needsAuditing = false
-    }
-
-    uk.gov.hmrc.businessregistrationnotification.controllers.Ping = {
+   controllers.Ping = {
         needsAuth = false
         needsLogging = true
         needsAuditing = false
@@ -155,3 +149,8 @@ microservice {
 
     }
 }
+
+basicAuthentication.enabled: true
+basicAuthentication.realm: Production
+basicAuthentication.username: foo
+basicAuthentication.password: bar
