Upgrade play to 2.5.8

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,6 +17,9 @@
 
 appName=business-registration-notification
 
+play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
@@ -61,9 +64,9 @@ application.router=prod.Routes
 
 # Controller
 # ~~~~~
-# By default all controllers will have authorisation, logging and 
+# By default all controllers will have authorisation, logging and
 # auditing (transaction monitoring) enabled.
-# The below controllers are the default exceptions to this rule. 
+# The below controllers are the default exceptions to this rule.
 
 controllers {
     # 300 is the default, you may need to change this according to your needs
@@ -75,7 +78,7 @@ controllers {
       needsAuditing = false
     }
 
-   controllers.Ping = {
+    controllers.Ping = {
         needsAuth = false
         needsLogging = true
         needsAuditing = false
@@ -126,9 +129,6 @@ auditing {
 }
 
 
-mongodb {
-    uri = "mongodb://localhost:27017/business-registration-notification"
-}
 
 
 microservice {
@@ -140,6 +140,7 @@ microservice {
             enabled = false
         }
     }
+
     services {
 
         auth {
