Accepts ETMP posts and routes data to CR

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,20 +69,26 @@ application.router=prod.Routes
 # The below controllers are the default exceptions to this rule.
 
 controllers {
-    # 300 is the default, you may need to change this according to your needs
-    confidenceLevel = 300
+  # 300 is the default, you may need to change this according to your needs
+  confidenceLevel = 300
 
-    com.kenshoo.play.metrics.MetricsController = {
-      needsAuth = false
-      needsLogging = false
-      needsAuditing = false
-    }
+  com.kenshoo.play.metrics.MetricsController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
 
-    controllers.Ping = {
-        needsAuth = false
-        needsLogging = true
-        needsAuditing = false
-    }
+  controllers.Ping = {
+    needsAuth = false
+    needsLogging = true
+    needsAuditing = false
+  }
+
+  controllers.NotificationController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
 }
 
 
@@ -106,49 +112,134 @@ logger.application=DEBUG
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
-    name = ${appName}
-    rateUnit = SECONDS
-    durationUnit = SECONDS
-    showSamples = true
-    jvm = true
-    enabled = true
+  name = ${appName}
+  rateUnit = SECONDS
+  durationUnit = SECONDS
+  showSamples = true
+  jvm = true
+  enabled = true
 }
 
+auditing {
+  enabled=true
+  traceRequests=true
+  consumer {
+    baseUri {
+      host = localhost
+      port = 8100
+    }
+  }
+}
 
 # Microservice specific config
 
-auditing {
-    enabled=true
-    traceRequests=true
-    consumer {
-        baseUri {
-            host = localhost
-            port = 8100
-        }
-    }
-}
-
-
-
-
-microservice {
+Dev {
+  microservice {
     metrics {
-        graphite {
-            host = graphite
-            port = 2003
-            prefix = play.${appName}.
-            enabled = false
-        }
+      graphite {
+        host = graphite
+        port = 2003
+        prefix = play.${appName}.
+        enabled = false
+      }
     }
 
     services {
+      auth {
+        host=localhost
+        port=8500
+      }
 
-        auth {
-            host=localhost
-            port=8500
-        }
-
+      company-registration {
+        host = localhost
+        port = 9973
+      }
     }
+  }
+
+  auditing {
+    enabled=true
+    traceRequests=true
+    consumer {
+      baseUri {
+        host = localhost
+        port = 8100
+      }
+    }
+  }
+}
+
+Test {
+  microservice {
+    metrics {
+      graphite {
+        host = graphite
+        port = 2003
+        prefix = play.${appName}.
+        enabled = false
+      }
+    }
+
+    services {
+      auth {
+        host=localhost
+        port=8500
+      }
+
+      company-registration {
+        host = localhost
+        port = 9973
+      }
+    }
+  }
+
+  auditing {
+    enabled=true
+    traceRequests=true
+    consumer {
+      baseUri {
+        host = localhost
+        port = 8100
+      }
+    }
+  }
+}
+
+Prod {
+  microservice {
+    metrics {
+      graphite {
+        host = graphite
+        port = 2003
+        prefix = play.${appName}.
+        enabled = true
+      }
+    }
+
+    services {
+      auth {
+        host=auth.service
+        port=80
+      }
+
+      company-registration {
+        protocol = http
+        host = company-registration.service
+        port = 80
+      }
+    }
+  }
+
+  auditing {
+    enabled=true
+    traceRequests=true
+    consumer {
+      baseUri {
+        host = datastream.service
+        port = 80
+      }
+    }
+  }
 }
 
 basicAuthentication.enabled: true
