Updated basic auth conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -131,6 +131,13 @@ auditing {
   }
 }
 
+basicAuthentication {
+  enabled = true
+  realm = Production
+  username = foo
+  password = bar
+}
+
 # Microservice specific config
 
 Dev {
@@ -170,6 +177,13 @@ Dev {
 }
 
 Test {
+  basicAuthentication {
+    enabled = true
+    realm = Production
+    username = foo
+    password = bar
+  }
+
   microservice {
     metrics {
       graphite {
@@ -241,8 +255,3 @@ Prod {
     }
   }
 }
-
-basicAuthentication.enabled: true
-basicAuthentication.realm: Production
-basicAuthentication.username: foo
-basicAuthentication.password: bar
