Turned on logging for the controller

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,7 +86,7 @@ controllers {
 
   controllers.NotificationController = {
     needsAuth = false
-    needsLogging = false
+    needsLogging = true
     needsAuditing = false
   }
 }
