--- a/conf/application.conf
+++ b/conf/application.conf
@@ -144,10 +144,10 @@ Dev {
   microservice {
     metrics {
       graphite {
-        host = graphite
+        host = localhost
         port = 2003
         prefix = play.${appName}.
-        enabled = false
+        enabled = true
       }
     }
 
