--- a/conf/application.conf
+++ b/conf/application.conf
@@ -140,6 +140,17 @@ basicAuthentication {
 
 # Microservice specific config
 
+microservice {
+  metrics {
+    graphite {
+      host = localhost
+      port = 2003
+      prefix = play.${appName}.
+      enabled = true
+    }
+  }
+}
+
 Dev {
   microservice {
     metrics {
