disabled metrics for local

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -146,7 +146,7 @@ microservice {
       host = localhost
       port = 2003
       prefix = play.${appName}.
-      enabled = true
+      enabled = false
     }
   }
 }
@@ -158,7 +158,7 @@ Dev {
         host = localhost
         port = 2003
         prefix = play.${appName}.
-        enabled = true
+        enabled = false
       }
     }
 
