--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,7 +47,8 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-application.global=config.MicroserviceGlobal
+#application.global=config.MicroserviceGlobal
+play.http.filters = "config.filters.MicroserviceFilters"
 
 # Router
 # ~~~~~
