SCRS-5419 Updated all .service extensions in application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -247,19 +247,19 @@ Prod {
 
     services {
       auth {
-        host=auth.service
+        host=auth.protected.mdtp
         port=80
       }
 
       company-registration {
         protocol = http
-        host = company-registration.service
+        host = company-registration.protected.mdtp
         port = 80
       }
 
       paye-registration {
         protocol = http
-        host = paye-registration.service
+        host = paye-registration.protected.mdtp
         port = 80
       }
     }
@@ -270,9 +270,11 @@ Prod {
     traceRequests=true
     consumer {
       baseUri {
-        host = datastream.service
+        host = datastream.protected.mdtp
         port = 80
       }
     }
   }
 }
+
+
