SCRS Fixed BRN logging with dependancy

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,6 +18,8 @@
 appName=business-registration-notification
 
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+play.modules.enabled += "config.Module"
+
 play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
 # Session Timeout
