--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,6 +22,8 @@ play.modules.enabled += "config.Module"
 
 play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
+http-verbs.retries.ssl-engine-closed-already.enabled = true
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
