--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,11 +14,32 @@
 
 # This is the main configuration file for the application.
 # ~~~~~
+include "backend.conf"
 
 appName=business-registration-notification
 
+# An ApplicationLoader that uses Guice to bootstrap the application.
+play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
+
+# Primary entry point for all HTTP requests on Play applications
+play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+
+# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
+# An audit connector must be provided.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+
+# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
+# A metric filter must be provided
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+
+# Provides an implementation and configures all filters required by a Platform frontend microservice.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
-play.modules.enabled += "config.Module"
 
 play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
@@ -46,13 +67,6 @@ application.session.secure=false
 # The application languages
 # ~~~~~
 application.langs="en"
-
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-#application.global=config.MicroserviceGlobal
-play.http.filters = "config.filters.MicroserviceFilters"
 
 # Router
 # ~~~~~
